# motor_response

./: CMakeLists.txt  README.md  encoder.h  histogramFilter.h  motor.h  motor_response.cpp  package.xml  pid.yaml  readme.md  sample.cpp  sample.launch  settings.yaml  tune.cpp  tune.launch  utilities.h
analog/: analog.ino
config/: common.yaml  joint.yaml  limits.yaml  pid.yaml  sample.yaml  settings.yaml  tune.yaml
config/presets/: base.yaml  forearm_actuator.yaml  upperarm_actuator.yaml
launch/: sample.launch  tune.launch
msg/: PwmChannel.msg
samples/: base_response.csv  forearm_response.csv  upperarm_response.csv
src/: encoder.h  filter.h  motor.h  sample.cpp  tune.cpp  utilities.h
